--- a/Frontend/src/app/Base/components/newproject/newproject.component.html
+++ b/Frontend/src/app/Base/components/newproject/newproject.component.html
@@ -19,7 +19,10 @@
         formControlName="projectNumber"
         required
         [class.is-invalid]="
-          localForm.submitted && newprojectForm.get('projectNumber')?.invalid
+          (localForm.submitted &&
+            newprojectForm.get('projectNumber')?.invalid) ||
+          (newprojectForm.get('projectNumber')?.touched &&
+            newprojectForm.get('projectNumber')?.invalid)
         "
       />
       <div
@@ -46,7 +49,9 @@
         formControlName="projectName"
         required
         [class.is-invalid]="
-          localForm.submitted && newprojectForm.get('projectName')?.invalid
+          (localForm.submitted && newprojectForm.get('projectName')?.invalid) ||
+          (newprojectForm.get('projectName')?.touched &&
+            newprojectForm.get('projectName')?.invalid)
         "
       />
     </div>
@@ -64,7 +69,9 @@
         formControlName="customer"
         required
         [class.is-invalid]="
-          localForm.submitted && newprojectForm.get('customer')?.invalid
+          (localForm.submitted && newprojectForm.get('customer')?.invalid) ||
+          (newprojectForm.get('customer')?.touched &&
+            newprojectForm.get('customer')?.invalid)
         "
       />
     </div>
@@ -81,7 +88,9 @@
         formControlName="group"
         required
         [class.is-invalid]="
-          localForm.submitted && newprojectForm.get('group')?.invalid
+          (localForm.submitted && newprojectForm.get('group')?.invalid) ||
+          (newprojectForm.get('group')?.touched &&
+            newprojectForm.get('group')?.invalid)
         "
       />
     </div>
@@ -132,7 +141,9 @@
         formControlName="startdate"
         required
         [class.is-invalid]="
-          localForm.submitted && newprojectForm.get('startdate')?.invalid
+          (localForm.submitted && newprojectForm.get('startdate')?.invalid) ||
+          (newprojectForm.get('startdate')?.touched &&
+            newprojectForm.get('startdate')?.invalid)
         "
       />
     </div>
@@ -166,6 +177,7 @@
   >
     {{ "Please enter all the mandatory fields (*)" | translate }}
   </div>
+
   <div class="button-container">
     <button
       class="cancelButton"
